ncc/testsuite/negative/yield-delayed.n
#pragma indent

public class Term
    public GetEnumerator () : System.Collections.Generic.IEnumerator [object]
      _ = fun (t, m) { t.foobar } // E: typing fails on accessing member
      yield null

